# edt-langchain-ai-agent

./: README.md  environment.yml  langgraph.json  pyproject.toml  requirements.txt
src/: chromadb_manager.py  config.py  create_embeddings.py  main.py  paths.py
